--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chalk": "5.0.0",
     "debug": "4.3.3",
     "dotenv": "^16.0.1",
+    "eth-delegatable-utils": "^1.1.0",
     "ethereum-waffle": "3.4.0",
     "ethers": "^5.6.8",
     "hardhat": "^2.10.1",
