--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ export POLYGON_MAINNET_RPC_URL=''
 export POLYGON_TESTNET_RPC_URL=''
 export OPTIMISM_MAINNET_RPC_URL=''
 export OPTIMISM_TESTNET_RPC_URL=''
+export BASE_MAINNET_RPC_URL=''
+export BASE_TESTNET_RPC_URL=''
 export ARCHIVE_NODE_RPC_URL=''
 
 # Verification
